<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_2">Card View 2</string>
    <string name="title_4">Card View 4</string>
    <string name="title_5">Card View 5</string>
    <string name="title_7">Card View 7</string>
    <string name="title_8">Card View 8</string>
    <string name="title_8b">Card View 8b</string>
    <string name="title_9">Card View 9</string>
    <string name="title_10">Card View 10</string>
    <string name="title_12">Card View 12</string>
    <string name="subtitle">This is the subtitle for this card view</string>
    <string name="supporting_text">This is the supporting text for this card view.</string>
    <string name="supporting_text_long">This is the supporting text for this card view. This is the supporting text for this card view. This is the supporting text for this card view. This is the supporting text for this card view. This is the supporting text for this card view.</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="action_3">Action 3</string>
</resources>
