<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/ic_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar_image"
            app:layout_constraintTop_toTopOf="@+id/avatar_image"
            tools:text="@string/title_2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar_image"
            tools:text="@string/subtitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/supporting_text"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_image"
            tools:src="@drawable/background_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/supporting_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/action_button_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="@string/supporting_text_long" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_button_1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supporting_text"
            tools:text="@android:string/ok" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_button_2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/action_button_1"
            app:layout_constraintTop_toTopOf="@+id/action_button_1"
            tools:text="@android:string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_button_3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/action_button_2"
            app:layout_constraintTop_toTopOf="@+id/action_button_2"
            tools:text="@android:string/copy" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/supplemental_action_1"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="?attr/colorControlNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/supplemental_action_2"
            app:layout_constraintTop_toTopOf="@+id/supplemental_action_2"
            app:srcCompat="@drawable/ic_star_outline" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/supplemental_action_2"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="?attr/colorControlNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/supplemental_action_3"
            app:layout_constraintTop_toTopOf="@+id/supplemental_action_3"
            app:srcCompat="@drawable/ic_star_outline" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/supplemental_action_3"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:tint="?attr/colorControlNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_star_outline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
